# AI-Legal-Analyzer

./: .gitignore  main.py  project_setup.py  pyproject.toml  requirements.txt  run_app.py
backend/: app.py  config.py
backend/reports/: report_generator.py
backend/routes/: query_routes.py  upload_routes.py
backend/services/: embedder.py  parser.py  rag.py  retriever.py  risk_analysis.py
data/reports/: Agreement_TilesSupply_20150726.pdf.html  SampleContract-Shuttle.pdf.html  sample_contract.txt.html
data/uploads/: sample_contract.txt
frontend/: package-lock.json  package.json
frontend/components/: Contact.js  Footer.js  Hero.js  HowItWorks.js  Navbar.js  features.js
frontend/components/Demo/: AnalysisResults.js  ChatBox.js  UploadBox.js
frontend/pages/: index.js
frontend/styles/: globals.css
