[project]
name = "ai-legal-analyzer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.0.20",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "jinja2>=3.1.6",
    "pymupdf>=1.26.4",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.0",
]
